--- a/pwa/manifest.json
+++ b/pwa/manifest.json
@@ -1,21 +1,22 @@
-self.addEventListener("install", event => {
-  event.waitUntil(
-    caches.open("pwa-cache").then(cache => {
-      return cache.addAll([
-        "/",
-        "/index.html",
-        "/assets/styles.css",
-        "/assets/app.js",
-        "/pwa/manifest.json"
-      ]);
-    })
-  );
-});
-
-self.addEventListener("fetch", event => {
-  event.respondWith(
-    caches.match(event.request).then(response => {
-      return response || fetch(event.request);
-    })
-  );
-});
+{
+  "name": "Python Learning PWA",
+  "short_name": "PyLearn",
+  "description": "Learn Python with interactive lessons",
+  "start_url": "/",
+  "display": "standalone",
+  "background_color": "#1a1a2e",
+  "theme_color": "#4a90e2",
+  "orientation": "portrait-primary",
+  "icons": [
+    {
+      "src": "/icons/icon-192.png",
+      "sizes": "192x192",
+      "type": "image/png"
+    },
+    {
+      "src": "/icons/icon-512.png",
+      "sizes": "512x512",
+      "type": "image/png"
+    }
+  ]
+}
